--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <a href="./Tribute page/index.html">Tribute Page</a>
+    <a href="./Survey form/index.html">Survey form</a>
 </body>
 </html>
