--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="./Tribute page/index.html">Tribute Page</a>
+    <a href="./Tribute page/index.html">Tribute Page</a><br>
     <a href="./Survey form/index.html">Survey form</a>
 </body>
 </html>
