--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <a href="./Tribute page/index.html">Tribute Page</a><br>
-    <a href="./Survey form/index.html">Survey form</a>
+    <a href="./Survey form/index.html">Survey Form</a><br>
+    <a href="./landingPage/index.html">Landing Page</a>
 </body>
 </html>
