Uploading thecnical page projecy, adding link to index

--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
     <title>Document</title>
 </head>
 <body>
+    <h1>Freecodecamp projects Index</h1>
     <a href="./Tribute page/index.html">Tribute Page</a><br>
     <a href="./Survey form/index.html">Survey Form</a><br>
-    <a href="./landingPage/index.html">Landing Page</a>
+    <a href="./landingPage/index.html">Landing Page</a><br>
+    <a href="./thecnicalPage/index.html">Technical Page</a>
 </body>
 </html>
