--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <a href="./Tribute page/index.html">Tribute Page</a><br>
     <a href="./Survey form/index.html">Survey Form</a><br>
     <a href="./landingPage/index.html">Landing Page</a><br>
-    <a href="./thecnicalPage/index.html">Technical Page</a>
+    <a href="./thecnicalPage/index.html">Technical Page</a><br>
+    <a href="./personalPortfolio/index.html">personalPortfolio</a>
 </body>
 </html>
